[workspace]
resolver = "2"
members = [
    "skirmish_one",
    "skirmish_two",
    "skirmish_three",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["anataliocs"]
publish = false

[workspace.dependencies]
soroban-sdk = "22.0.7"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
